# MathisDESAULTY

./: .coverage  .gitignore  README.md  canvas.ps  coverage.xml  haussdorf_distance.ipynb  knn_test.py  main.py  performance_test.py  pyproject.toml  requirements.txt
1stWeek/: Specification_Document.md  week 1 report.md
Documentation/: Implementation_document.md  Object.md  Testing.md  User_guide.md  research_on_distances.md  week 1 report.md  week 2 report.md  week 3 report.md  week 4 report.md  week 5 report.md  week 6 report.md
Notebooks/: haussdorf_distance.ipynb  knn_test.py
Object/: dataset_mint_user.py  draw_interface.py  image_user.py  k_nn.py  k_nn_mnist.py  math_tool.py
Tests/: test_draw_interface.py  test_image_user.py  test_k_nn_mnist.py  test_math_tool.py
