[tool.poetry]
name = "algoandailab-mathisdesaulty"
version = "0.1.0"
description = ""
authors = ["mathisdesaulty <128808167+mathisdesaulty@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.1"
numpy = "2.1.1"
pandas = "2.2.2"
scipy = "1.14.1"
scikit-learn = "1.5.1"
matplotlib = "3.9.2"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
selenium = "3.141.0"
pylint = "3.2.7"
coverage = "7.6.1"
pytest = "7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
